CHANGES IN VERSION 1.15.0-1.15.3

    o the version number was bumped for the Bioconductor develop version 3.5


CHANGES IN VERSION 1.14.1
-------------------------

    o The default compression setting in `seqVCF2GDS()` and `seqMerge()` is
      changed from "ZIP_RA" to "LZMA_RA"

    o `seqVCF2GDS()`: variable-length encoding method is used to store
      integers in the FORMAT field of VCF files to reduce the file size and
      compression time


CHANGES IN VERSION 1.13.0-1.13.6
-------------------------

    o the version number was bumped for the Bioconductor develop version 3.4


CHANGES IN VERSION 1.12.0-1.12.9
-------------------------

    o the version number was bumped for the Bioconductor release version 3.3

    o `seqVCF_SampID()`, `seqVCF_Header()` and `seqVCF2GDS()` allow a
      connection object instead of a file name

    o "$num_allele" is allowed in `seqGetData()` and `seqApply()` (the numbers
      of distinct alleles)

    o a new option '.progress' in `seqAlleleFreq()`, `seqMissing()` and
      `seqAlleleCount()`

    o 'as.is' can be a `gdsn.class` object in `seqApply()`

    o v1.12.7: a new argument 'parallel' in `seqApply()`, BiocParallel
      integration in `seqParallel()` and a new function `seqBlockApply()`

    o v1.12.8: a new function `seqGetParallel()`


CHANGES IN VERSION 1.11.19-1.11.22
-------------------------

    o utilizes the official C API `R_GetConnection()` to accelerate text
      import and export, requiring R (>=v3.3.0); alternative version (backward
      compatible with R_v2.15.0) is also available on github
      (https://github.com/zhengxwen/SeqArray/releases/tag/v1.11.18)

    o ~4x speedup in the sequential version of `seqVCF2GDS()`, and
      `seqVCF2GDS()` can run in parallel

    o variables in "annotation/format/" should be two-dimensional as what
      mentioned in the vignette.


CHANGES IN VERSION 1.11.0-1.11.18
-------------------------

    o rewrite `seqSummary()`
