@@ -2,7 +2,7 @@ Package: SeqArray
 Type: Package
 Title: Big Data Management of Whole-genome Sequence Variant Calls
 Version: 1.15.3
-Date: 2017-01-24
+Date: 2017-02-10
 Depends: R (>= 3.3.0), gdsfmt (>= 1.10.1)
 Imports: methods, parallel, S4Vectors, IRanges, GenomicRanges,
         GenomeInfoDb, SummarizedExperiment, Biostrings, VariantAnnotation
